[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/shaker/Shaker.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/theme/fonts/body_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://common/shaker/shake_profile_default.tres" type="Texture" id=5]

[sub_resource type="OpenSimplexNoise" id=783]
seed = 14
period = 115.7

[sub_resource type="NoiseTexture" id=4]
noise = SubResource( 783 )

[node name="Shaker" type="Node"]
script = ExtResource( 1 )
shake_profile = ExtResource( 5 )

[node name="VisualizerLayer" type="CanvasLayer" parent="."]
layer = 128

[node name="VBoxContainer" type="VBoxContainer" parent="VisualizerLayer"]
margin_left = 32.0
margin_top = 256.0
margin_right = 528.0
margin_bottom = 939.0
custom_constants/separation = 16

[node name="TextureButton" type="TextureButton" parent="VisualizerLayer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 512.0
focus_mode = 1
texture_normal = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="VisualizerLayer/VBoxContainer"]
margin_top = 528.0
margin_right = 512.0
margin_bottom = 918.0
theme = ExtResource( 2 )

[node name="Label_9" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Current trauma:  %s"

[node name="Label_8" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 43.0
margin_right = 512.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 3 )
text = "Current trauma:  %s"

[node name="VSeparator" type="VSeparator" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 512.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 93.0
margin_right = 512.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 3 )
text = "Added trauma:  %s"

[node name="Label_2" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 512.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 3 )
text = "Trauma time: %s ... decay delay"

[node name="Label_3" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 179.0
margin_right = 512.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 3 )
text = "Decay:  %s"

[node name="Label_4" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 512.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 3 )
text = "Max ver:  %s"

[node name="Label_5" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 512.0
margin_bottom = 304.0
custom_fonts/font = ExtResource( 3 )
text = "Max hor:  %s"

[node name="Label_6" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 308.0
margin_right = 512.0
margin_bottom = 347.0
custom_fonts/font = ExtResource( 3 )
text = "Max rot:  %s"

[node name="Label_7" type="Label" parent="VisualizerLayer/VBoxContainer/VBoxContainer"]
margin_top = 351.0
margin_right = 512.0
margin_bottom = 390.0
custom_fonts/font = ExtResource( 3 )
text = "Time scale  %s"
